# ai-stock-research-platform

./: README.md  app.py  main.py  portfolio.json  pyproject.toml  watchlist.JSON
Data/: portfolio.json
Utils/: data_utils.py  portfolio_utils.py  scoring.py  ui_sections.py
