[project]
name = "ai-stock-research-platform"
version = "0.1.0"
description = "A Streamlit-based stock research dashboard with portfolio tracking, watchlist management, peer comparison, and valuation tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "streamlit>=1.58.0",
    "yfinance>=1.4.1",
]